--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <!-- 
       TO DO:
         - dual units would be nice (display unit is configurable)
-        - add export!
         - ability to modify endpoints of dimension line by clicking and dragging
+        - 3 point circle diameter measurement
+        - ability to straighten image and align to a grid
+        - perpendicular end-segments to measurement line (to ensure you're measuring orthogonally)
+        - bug with digicam, doesn't update when you push the button (after the first time)
      -->
 
     <style>
@@ -408,6 +411,8 @@
 
   document.getElementById("digicambtn").onclick = function(evt) {
           var imgtag = document.getElementById("img");
+          // should i set this to null first to trigger a change?
+          //imgtag.setAttribute('xlink:href','');
           imgtag.setAttribute('xlink:href','http://localhost:5513/preview.jpg');
         }
 
